--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,15 +37,14 @@ textarea{
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
-  border-top: 1px solid white;;
+  height: 4em;
+  border-top: 1px solid white;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
-  border-right: 1px dashed #000000;
-  padding: 0 .75em;
+  padding: 0 .75em; 
 }
 
 .past {
@@ -74,4 +73,10 @@ textarea{
 .saveBtn i:hover {
   font-size: 2em;
   transition: all .3s ease-in-out;
+}
+
+@-moz-document url-prefix() {
+  .row {
+    height: 5em;
+  }
 }
